# mbcli

./: .gitignore  README.md  pyproject.toml
mbcli/: __init__.py  __main__.py  api.py  cli.py  credentials.py  extract.py  paths.py  render.py  session.py
tests/: test_credentials.py  test_extract.py  test_status.py
