[project]
name = "mbcli"
version = "0.1.0"
description = "Read Mercedes me vehicle status (SoC, range, mileage, tire pressure) by reusing a browser session."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
]

[project.scripts]
mbcli = "mbcli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mbcli*"]
